samples/_failures_safe/1761318710_b5ee2e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4653d72d.c: In function ‘main’:
./samples/SAFE/__tmp_4653d72d.c:151:9: error: missing terminating " character
  151 |         "2024-01-15T10:31:15 WARNING High memory usage
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4653d72d.c:151:9: error: expected expression at end of input
./samples/SAFE/__tmp_4653d72d.c:151:9: error: expected declaration or statement at end of input
